test/files/pos/t289.scala
class A {
  object B;
}

object C extends A;
