test/files/neg/t0699/A.scala
object A {
  sealed trait T
  sealed class C
}
